[package]
name = "youtube_bot"
version = "0.1.0"
edition = "2024"

[dependencies]
poise = "0.6.1"
reqwest = "0.12.22"
serenity = {version = "0.12.4", features = ["client", "standard_framework", "voice"]}
songbird = { version = "0.5.0", default-features = true }
tokio = {version = "1.46.1", features = ["macros", "rt-multi-thread"] }
yt-dlp = { git = "https://github.com/sshcrack/yt-dlp.git", version = "1.3.4" }


[dependencies.symphonia]
version = "0.5.4"
features = ["aac", "mp3", "isomp4", "alac", "ogg"]
